--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>NeonStream</title>
+</head>
+<body style="font-family: Arial, sans-serif; max-width: 760px; margin: 0 auto; padding: 40px; line-height: 1.4;">
+  <h1 style="margin-bottom: 8px;">NeonStream</h1>
+  <p style="margin-top: 0; opacity: 0.85;">AI TikTok trends + content workflow tools.</p>
+
+  <h2 style="margin-top: 28px;">Choose your plan</h2>
+
+  <div style="display: grid; gap: 14px; margin-top: 14px;">
+    <a href="PASTE_STARTER_TEST_LINK_HERE" target="_blank" rel="noopener noreferrer"
+       style="display:block; padding:16px 18px; border:1px solid #ddd; border-radius:12px; text-decoration:none; color:#111;">
+      <strong>Starter</strong> — $9.99 / month
+      <div style="font-size: 14px; opacity: 0.8; margin-top: 6px;">For getting started.</div>
+    </a>
+
+    <a href="PASTE_PRO_TEST_LINK_HERE" target="_blank" rel="noopener noreferrer"
+       style="display:block; padding:16px 18px; border:1px solid #ddd; border-radius:12px; text-decoration:none; color:#111;">
+      <strong>Pro</strong> — $29.99 / month
+      <div style="font-size: 14px; opacity: 0.8; margin-top: 6px;">Best for creators.</div>
+    </a>
+
+    <a href="PASTE_BUSINESS_TEST_LINK_HERE" target="_blank" rel="noopener noreferrer"
+       style="display:block; padding:16px 18px; border:1px solid #ddd; border-radius:12px; text-decoration:none; color:#111;">
+      <strong>Business</strong> — $79.99 / month
+      <div style="font-size: 14px; opacity: 0.8; margin-top: 6px;">For heavy usage.</div>
+    </a>
+  </div>
+
+  <p style="margin-top: 22px; font-size: 13px; opacity: 0.75;">
+    After checkout, you’ll receive a confirmation email from Stripe.
+  </p>
+</body>
+</html>
 
