--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>NeonStream</title>
+  <link rel="icon" href="/favicon.ico" />
 </head>
 <body style="font-family: Arial, sans-serif; max-width: 760px; margin: 0 auto; padding: 40px; line-height: 1.4;">
   <h1 style="margin-bottom: 8px;">NeonStream</h1>
